<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Travel Becomes More Fun!</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="cont">Continue</string>
    <string name="fullname">Fullname</string>
    <string name="bio">Bio</string>
    <string name="guide_tips"><![CDATA[Guide & Tips]]></string>
</resources>
