<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@drawable/bg_app">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/applogowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:background="@drawable/bg_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/mlight"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textGrey"/>

            <EditText
                android:id="@+id/sign_in_username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_input"
                android:layout_marginBottom="24dp"
                android:lines="1"
                android:textColor="@color/textBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/mlight"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textGrey"/>

            <EditText
                android:id="@+id/sign_in_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_input"
                android:lines="1"
                android:textColor="@color/textBlack"/>

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_blue"
                android:fontFamily="@font/mmedium"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_newAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/mlight"
        android:text="Create New Account"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>