<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEdit"
    android:background="@color/backgroundWhite">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/bg_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/mregular"
                android:text="Edit Profile"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mlight"
                android:gravity="center"
                android:lineSpacingExtra="6sp"
                android:text="We highly suggest you to\nuse the correct informations"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/icon_nopic"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="44dp"
                            android:layout_marginEnd="104dp"
                            android:background="@drawable/btnpls"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/fullname"
                        android:textColor="@color/textGrey"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/bg_input"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/textBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/bio"
                        android:textColor="@color/textGrey"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/bg_input"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/textBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/username"
                        android:textColor="@color/textGrey"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/bg_input"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/textBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/password"
                        android:textColor="@color/textGrey"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/bg_input"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textColor="@color/textBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/mlight"
                        android:text="@string/email_address"
                        android:textColor="@color/textGrey"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_input"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:textColor="@color/textBlack" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="30dp"
                android:background="@drawable/bg_blue"
                android:fontFamily="@font/mmedium"
                android:text="Save"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>